Add Assignment 3 Vega-Lite visualizations and layout fix

--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
           View my data visualizations
           <span class="viz-arrow">→</span>
         </span>
+      </a> 
+
+      <a href="assignment3.html" class="viz-button">
+        <span class="viz-button-label">
+          View Assignment 3 (Vega-Lite)
+          <span class="viz-arrow">→</span>
+        </span>
       </a>
+      
 
       <!-- Work preview: only this card should be clickable + link out to Framer Portfolio -->
       <section id="work-preview" class="no-card">
@@ -188,6 +196,8 @@
           </li>
         </ul>
       </section>
+
+    </main>
 
     <!-- Footer -->
     <footer>
