--- a/visualizations.html
+++ b/visualizations.html
@@ -28,6 +28,7 @@
     </header>
 
     <main class="viz-grid">
+
       <!-- DATA VIZ -->
       <section class="viz-card">
         <div class="viz-head">
@@ -84,8 +85,6 @@
       <p>© 2026 Isabel Garcia</p>
     </footer>
 
-    <!-- Scripts: vis.js sets up the SVGs, main.js handles interactions -->
-    <script src="vis.js"></script>
-    <script src="main.js"></script>
-  </body>
-</html>
+<!-- Existing scripts -->
+<script src="vis.js"></script>
+<script src="main.js"></script>
