some edits to visualization des

--- a/assignment3.html
+++ b/assignment3.html
@@ -60,16 +60,16 @@
           <strong>Prompt 1:</strong> For a selected platform, how does the genre mix of global sales change over time?
         </p>
         <p class="viz-note">
-          <strong>Prompt 2:</strong> Do platforms develop distinct “genre signatures” during their peak years?
+          <strong>Prompt 2:</strong> Do platforms develop distinct genre signatures during their peak years?
         </p>
 
         <div class="vega-wrap" id="vg-viz2"></div>
 
         <p class="viz-note">
           This visualization shows how the mix of game genres contributing to a platform’s sales
-          changes over time. Each year represents 100% of that platform’s sales, and the colored
+          changes over time. Each year represents 100% of that platform’s sales, and the coloured
           layers show what share each genre contributes. This makes it easier to spot shifts in a
-          platform’s “identity” over its lifespan.
+          platform’s identity over the years.
         </p>
       </section>
 
@@ -112,8 +112,8 @@
   
     <p class="viz-note">
       This heatmap compares each platform’s share of sales in a region to its share globally. Values above 1 mean the
-      platform is disproportionately popular in that region, while values below 1 mean it is under-represented. The
-      goal is to highlight regional “home bases” and market segmentation patterns rather than just raw sales totals.
+      platform is disproportionately popular in that region, while values below 1 mean it is under represented. The
+      goal is to highlight regional home bases and market segmentation patterns rather than just raw sales totals.
     </p>
   </section>
   
